force-app/main/default/objects/Coaching_Event_Section_Score__c/fields/Coaching_Event__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Event__c</fullName>
    <label>Coaching Event</label>
    <referenceTo>Coaching_Event__c</referenceTo>
    <relationshipLabel>Section Scores</relationshipLabel>
    <relationshipName>ZetaMRCoachSectionScores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>