force-app/main/default/objects/Coaching_Event_Section_Score__c/fields/Manager_Score__c.field-meta.xml
<CustomField>
    <fullName>Manager_Score__c</fullName>
    <label>Manager Score (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>