force-app/main/default/objects/Coaching_Event_Section_Score__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <description>Assigned rep on the parent coaching event.</description>
    <formula>Coaching_Event__r.Employee__r.FirstName &amp; &quot; &quot; &amp; Coaching_Event__r.Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Name</label>
    <type>Text</type>
</CustomField>